added link to google font and css in base.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-5 col-md-12 my-5">
-                <h1>
+                <h1 class="green">
                     The e-shop of hand-made stones jewellery
                 </h1>
                 <p>
