--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,3 @@
-<!-- Base template from Code Institute - Boutique Ado vidéos "Base template" -->
-
 {% load static %}
 
 <!doctype html>
@@ -37,37 +35,36 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <div class="row">
-        <div class="col-12 col-lg-5 text-center text-lg-left">
-          <a href="{% url 'home' %}" class="nav-link">
-            <h1><strong></strong>Stones</strong> Gate</h1>
-          </a>
-        </div>
-        <div class="col-12 col-lg-5">
-          <ul class="list-inline list-unstyled text-center text-lg-right">
-            <li class="list-inline-item dropdown">
-              <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="text-center">
-                      <div><i class="fas fa-user fa-lg"></i></div>
-                      <p class="my-0">My Account</p>
-                  </div>
-              </a>
-              <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                  {% if request.user.is_authenticated %}
-                      {% if request.user.is_superuser %}
-                          <a href="" class="dropdown-item">Product Management</a>
-                      {% endif %}
-                      <a href="" class="dropdown-item">My Profile</a>
-                      <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                  {% else %}
-                      <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                      <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                  {% endif %}
-              </div>
-          </li>
-          
+        <div class="row">
+            <div class="col-12 col-lg-5 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link">
+                    <h2 class="green"><strong>Stones</strong> Gate</h2>
+                </a>
+            </div>
+            <div class="col-12 col-lg-5">
+                <ul class="list-inline list-unstyled text-center text-lg-right">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <div><i class="fas fa-user fa-lg"></i></div>
+                                <p class="my-0">My Account</p>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                <a href="" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}bag_full{% else %}text-black{% endif %} nav-link" href="">
+                        <a class="{% if grand_total %}bag_full{% else %}nag_none{% endif %} nav-link" href="">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
@@ -80,10 +77,9 @@
                             </div>
                         </a>
                     </li>
-          </ul>
+                </ul>
+            </div>
         </div>
-
-      </div>
     </header>
 
     {% if messages %}
