--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     {% block corecss %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% endblock %}
 
@@ -35,10 +35,10 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <div class="row">
+        <div class="row navbar">
             <div class="col-12 col-lg-5 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link">
-                    <h2 class="green"><strong>Stones</strong> Gate</h2>
+                    <h2 class="logo"><strong>Stones</strong> Gate</h2>
                 </a>
             </div>
             <div class="col-12 col-lg-5">
